log

Thu 14 Mar 2024 08:23:32 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
c6aa561
Thu 14 Mar 2024 08:27:14 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
6ba5955
Thu 14 Mar 2024 08:28:09 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
90f293e
Thu 14 Mar 2024 08:28:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
dfaa382
Thu 14 Mar 2024 08:29:59 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
9529475
Thu 14 Mar 2024 08:30:33 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 10/70
4c959a4
Thu 14 Mar 2024 08:31:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
8814213
Thu 14 Mar 2024 08:35:28 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:44:7: error: array size missing in ‘arrayNuevo’
   44 |   int arrayNuevo[];
      |       ^~~~~~~~~~
exercises.c:48:17: error: array subscript is not an integer
   48 |       arrayNuevo[newSize] = arr[i];
      |                 ^
exercises.c:52:10: error: function returns address of local variable [-Werror=return-local-addr]
   52 |   return arrayNuevo;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
59c597b
Thu 14 Mar 2024 08:36:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:17: error: array subscript is not an integer
   48 |       arrayNuevo[newSize] = arr[i];
      |                 ^
Compilation failed
f50a37d
Thu 14 Mar 2024 08:37:47 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:17: error: array subscript is not an integer
   48 |       arrayNuevo[newSize] = arr[i];
      |                 ^
exercises.c:52:10: error: function returns address of local variable [-Werror=return-local-addr]
   52 |   return arrayNuevo;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
01d724f
Thu 14 Mar 2024 08:38:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:45:7: error: size of array ‘arrayNuevo’ has non-integer type
   45 |   int arrayNuevo[newSize];
      |       ^~~~~~~~~~
exercises.c:48:17: error: array subscript is not an integer
   48 |       arrayNuevo[newSize] = arr[i];
      |                 ^
exercises.c:52:10: error: function returns address of local variable [-Werror=return-local-addr]
   52 |   return arrayNuevo;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0f76629
Thu 14 Mar 2024 08:39:05 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:49:17: error: array subscript is not an integer
   49 |       arrayNuevo[newSize] = arr[i];
      |                 ^
Compilation failed
8791de5
